syntax = "proto3";

package ru.vsk.grpc;

option java_multiple_files = true;
option java_package = "ru.vsk.grpc";

message CheckCredentialsRequest {
  string phone = 1;
  string password = 2;
}

message CheckCredentialsResponse {
  bool valid = 1;
}

service CheckCredentialsService {
  rpc checkCredentials(CheckCredentialsRequest) returns (CheckCredentialsResponse) {}
}
